Resources/public/less/icons/ligaturesymbols.less
/*!
 * ligaturesymbols.less v1.0.0
 *
 * Mixins implementation of the LigatureSymbols web font by Kazuyuki Motoyama
 * See https://github.com/kudakurage/LigatureSymbols for more informations
 *
 * Copyright (c) 2013, Nathanaël Mariani <github@nmariani.fr>
 * For the full copyright and license information, please view the LICENSE
 * file that was distributed with this source code.
 */


@font-face {
    font-family: 'LigatureSymbols';
    src: url('/bundles/bootstrapp/fonts/ligaturesymbols/LigatureSymbols-2.11.eot');
    src: url('/bundles/bootstrapp/fonts/ligaturesymbols/LigatureSymbols-2.11.eot?#iefix') format('embedded-opentype'),
         url('/bundles/bootstrapp/fonts/ligaturesymbols/LigatureSymbols-2.11.woff') format('woff'),
         url('/bundles/bootstrapp/fonts/ligaturesymbols/LigatureSymbols-2.11.ttf') format('truetype'),
         url('/bundles/bootstrapp/fonts/ligaturesymbols/LigatureSymbols-2.11.svg#LigatureSymbols') format('svg');
    font-weight: normal;
    font-style: normal;
}

.ligaturesymbols(@content:"") {
  font-family: 'LigatureSymbols';
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-font-smoothing: antialiased;
  -ms-font-smoothing: antialiased;
  -o-font-smoothing: antialiased;
  font-smoothing: antialiased;
  -webkit-font-feature-settings: "liga" 1, "dlig" 1;
  -moz-font-feature-settings: "liga=1, dlig=1";
  -ms-font-feature-settings: "liga" 1, "dlig" 1;
  font-feature-settings: "liga" 1, "dlig" 1;

  /* bootstrapp fix */
  background: none !important;
  font-style: normal;

  &:before {
    content: @content;
  }

  &.icon-white {
    color: @white;
  }
}

.ligaturesymbols-table()                { .ligaturesymbols("\E127"); }
.ligaturesymbols-cell()                 { .ligaturesymbols("\E127"); }
.ligaturesymbols-copy()                 { .ligaturesymbols("\E038"); }
.ligaturesymbols-files()                { .ligaturesymbols("\E038"); }
.ligaturesymbols-cut()                  { .ligaturesymbols("\E03b"); }
.ligaturesymbols-scissors()             { .ligaturesymbols("\E03b"); }
.ligaturesymbols-backspace()            { .ligaturesymbols("\E010"); }
.ligaturesymbols-alignleft()            { .ligaturesymbols("\E005"); }
.ligaturesymbols-aligncenter()          { .ligaturesymbols("\E004"); }
.ligaturesymbols-alignright()           { .ligaturesymbols("\E006"); }
.ligaturesymbols-alignadjust()          { .ligaturesymbols("\E003"); }
.ligaturesymbols-italic()               { .ligaturesymbols("\E079"); }
.ligaturesymbols-bold()                 { .ligaturesymbols("\E01f"); }
.ligaturesymbols-underline()            { .ligaturesymbols("\E132"); }
.ligaturesymbols-strike()               { .ligaturesymbols("\E159"); }
.ligaturesymbols-emphasis()             { .ligaturesymbols("\E152"); }
.ligaturesymbols-code()                 { .ligaturesymbols("\E032"); }
.ligaturesymbols-link()                 { .ligaturesymbols("\E082"); }
.ligaturesymbols-chain()                { .ligaturesymbols("\E082"); }
.ligaturesymbols-quote()                { .ligaturesymbols("\E10b"); }
.ligaturesymbols-graph()                { .ligaturesymbols("\E05b"); }
.ligaturesymbols-magic()                { .ligaturesymbols("\E089"); }
.ligaturesymbols-effect()               { .ligaturesymbols("\E089"); }
.ligaturesymbols-brush()                { .ligaturesymbols("\E022"); }
.ligaturesymbols-color()                { .ligaturesymbols("\E033"); }
.ligaturesymbols-palette()              { .ligaturesymbols("\E033"); }
.ligaturesymbols-contrast()             { .ligaturesymbols("\E001"); }
.ligaturesymbols-adjust()               { .ligaturesymbols("\E001"); }
.ligaturesymbols-ink()                  { .ligaturesymbols("\E14a"); }
.ligaturesymbols-water()                { .ligaturesymbols("\E14a"); }
.ligaturesymbols-gradation()            { .ligaturesymbols("\E149"); }
.ligaturesymbols-grayscale()            { .ligaturesymbols("\E149"); }
.ligaturesymbols-sepia()                { .ligaturesymbols("\E14e"); }
.ligaturesymbols-grunge()               { .ligaturesymbols("\E14e"); }
.ligaturesymbols-invert()               { .ligaturesymbols("\E14b"); }
.ligaturesymbols-paint()                { .ligaturesymbols("\E09b"); }
.ligaturesymbols-paramater()            { .ligaturesymbols("\E09c"); }
.ligaturesymbols-param()                { .ligaturesymbols("\E09c"); }
.ligaturesymbols-slider()               { .ligaturesymbols("\E09c"); }
.ligaturesymbols-crop()                 { .ligaturesymbols("\E039"); }
.ligaturesymbols-check()                { .ligaturesymbols("\E029"); }
.ligaturesymbols-ok()                   { .ligaturesymbols("\E029"); }
.ligaturesymbols-checkbox()             { .ligaturesymbols("\E02a"); }
.ligaturesymbols-checkboxempty()        { .ligaturesymbols("\E02b"); }
.ligaturesymbols-pc()                   { .ligaturesymbols("\E09e"); }
.ligaturesymbols-display()              { .ligaturesymbols("\E09e"); }
.ligaturesymbols-compiter()             { .ligaturesymbols("\E09e"); }
.ligaturesymbols-keyboard()             { .ligaturesymbols("\E07d"); }
.ligaturesymbols-mobile()               { .ligaturesymbols("\E078"); }
.ligaturesymbols-iphone()               { .ligaturesymbols("\E078"); }
.ligaturesymbols-smartphone()           { .ligaturesymbols("\E078"); }
.ligaturesymbols-horizontal()           { .ligaturesymbols("\E071"); }
.ligaturesymbols-vertical()             { .ligaturesymbols("\E138"); }
.ligaturesymbols-web()                  { .ligaturesymbols("\E13f"); }
.ligaturesymbols-mail()                 { .ligaturesymbols("\E08a"); }
.ligaturesymbols-shopping()             { .ligaturesymbols("\E119"); }
.ligaturesymbols-cart()                 { .ligaturesymbols("\E119"); }
.ligaturesymbols-dashboard()            { .ligaturesymbols("\E03c"); }
.ligaturesymbols-key()                  { .ligaturesymbols("\E07c"); }
.ligaturesymbols-sns()                  { .ligaturesymbols("\E11f"); }
.ligaturesymbols-network()              { .ligaturesymbols("\E11f"); }
/* ... */

